# mcpviews

./: README.md  package-lock.json  package.json
.claude/rules/: explore-agent.md  mcp-mux.md  mcpviews.md
.github/workflows/: build-release.yml
cli/: Cargo.toml
cli/src/: main.rs
docs/: api-reference.md  architecture.md  cli.md  enhancements.md  plugin-development.md  plugins.md
public/: main.js  plugin-manager.js
public/renderers/: citation-panel.js  document-preview.js  mermaid-renderer.js  rich-content.js  shared.js  structured-data.js
registry/: registry.json
shared/: Cargo.toml
shared/src/: lib.rs  package.rs  plugin_store.rs  registry.rs  settings.rs  token_store.rs
sidecar/: sse-bridge.ts
src/: index.html  plugin-manager.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: setup-integrations.ps1  setup-integrations.sh
src-tauri/src/: auth.rs  commands.rs  http_server.rs  installer.rs  main.rs  mcp.rs  mcp_prompts.rs  mcp_registry_tools.rs  mcp_session.rs  mcp_tools.rs  plugin.rs  registry.rs  renderer_scanner.rs  review.rs  session.rs  state.rs  test_utils.rs  tool_cache.rs
tests/: drawer-stack-setup.js  drawer-stack.test.js  invocation-registry-setup.js  invocation-registry.test.js  shared-mcpview-links.test.js  shared-mcpview-setup.js
