[package]
name = "mcpviews-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
mcpviews-shared = { path = "../shared" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
