[package]
name = "mcp-mux-shared"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt"] }
zip = "2"
semver = "1"

[dev-dependencies]
tempfile = "3"
